--- a/users.html
+++ b/users.html
@@ -12,8 +12,6 @@
     <div class="sidebar collapsed" id="sidebar">
         <h2><i class="fas fa-cogs"></i> <span>Admin Panel</span></h2>
         <nav>
-            <a href="manage-products.html"><i class="fas fa-warehouse"></i> <span>Warehouse</span></a>
-            <a href="orders.html" class="menu-orders"><i class="fas fa-receipt"></i> <span>Orders</span><span class="notification-badge hidden" id="order-badge">0</span></a>
             <a href="users.html" class="active"><i class="fas fa-user-cog"></i> <span>User Management</span></a>
             <a href="index.html"><i class="fas fa-sign-out-alt"></i> <span>Logout</span></a>
         </nav>
@@ -39,6 +37,13 @@
                                 <label for="new-password">Password</label>
                                 <input type="password" id="new-password" required>
                             </div>
+                            <div class="form-group">
+                                <label for="new-role">Role</label>
+                                <select id="new-role" required>
+                                    <option value="warehouse">Warehouse</option>
+                                    <option value="admin">Admin</option>
+                                </select>
+                            </div>
                             <button type="submit" class="action-button primary">Add User</button>
                         </form>
                     </div>
@@ -49,6 +54,7 @@
                                 <tr>
                                     <th>ID</th>
                                     <th>Username</th>
+                                    <th>Role</th>
                                     <th>Actions</th>
                                 </tr>
                             </thead>
@@ -61,6 +67,31 @@
         </div>
     </div>
     
+    <div id="editUserModal" class="modal-container">
+        <div class="modal-overlay"></div>
+        <div class="modal-content">
+            <span class="close-button">&times;</span>
+            <h2 id="edit-modal-title">Edit User</h2>
+            <form id="edit-user-form">
+                <p>Editing user: <strong id="edit-username"></strong></p>
+                <div class="form-group">
+                    <label for="edit-password">New Password (leave blank to keep current)</label>
+                    <input type="password" id="edit-password" placeholder="Enter new password...">
+                </div>
+                <div class="form-group">
+                    <label for="edit-role">Role</label>
+                    <select id="edit-role" required>
+                        <option value="warehouse">Warehouse</option>
+                        <option value="admin">Admin</option>
+                    </select>
+                </div>
+                <div class="form-actions">
+                    <button type="submit" class="action-button primary">Save Changes</button>
+                </div>
+            </form>
+        </div>
+    </div>
+
     <script src="https://softstep-backend.onrender.com/socket.io/socket.io.js"></script>
     <script src="users.js"></script> 
 </body>
